@@ -1,3 +1,13 @@
+2011-04-07  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Adam Barth.
+
+        REGRESSION: "webkit-patch land" doesn't work correctly in SVN subdirectories
+        https://bugs.webkit.org/show_bug.cgi?id=58017
+
+        * Scripts/webkitpy/common/checkout/scm.py:
+        * Scripts/webkitpy/common/checkout/scm_unittest.py:
+
 2011-04-06  Chang Shu  <cshu@webkit.org>
 
         Reviewed by Darin Adler.
